--- a/Wall_Street_English/html/classroom-detail-immigration_control.html
+++ b/Wall_Street_English/html/classroom-detail-immigration_control.html
@@ -137,7 +137,7 @@
 					<p class="colorGray">Landing card 入境登记卡</p>					<p class="colorBlue">An official card to be given when going through immigration.</p>					<p class="colorGray">Fill in (a form) 填表格</p>					<p class="colorBlue">To put in whatever is needed to complete something.</p>					<p class="colorGray">Purpose 目的</p>					<p class="colorBlue">Reason for an action.</p>					<p class="colorGray">Dormitory 宿舍</p>					<p class="colorBlue">A residence hall for students.</p>					<p class="colorGray">Campus 校园</p>					<p class="colorBlue">The grounds and buildings of a university or college.</p>					<p class="colorGray">Declare 申报</p>					<p class="colorBlue">To make known publicly or officially, according to rules, custom, etc.</p>
 				</div>
 				<div class="exec clearfix txt-right">
-					<button class="btn btn-back">返回<i class="ico"></i></button>
+					<a href="index.html"><button class="btn btn-back">返回<i class="ico"></i></button></a>
 				</div>
 			</div>
 		</div>
