--- a/Wall_Street_English/html/classroom-detail-taking_a_message.html
+++ b/Wall_Street_English/html/classroom-detail-taking_a_message.html
@@ -152,7 +152,7 @@
 					<p class="colorBlue">To telephone someone or write to them.</p>
 				</div>
 				<div class="exec clearfix txt-right">
-					<button class="btn btn-back">返回<i class="ico"></i></button>
+					<a href="index.html"><button class="btn btn-back">返回<i class="ico"></i></button></a>
 				</div>
 			</div>
 		</div>
