--- a/Wall_Street_English/html/classroom-detail-talking_about_children.html
+++ b/Wall_Street_English/html/classroom-detail-talking_about_children.html
@@ -140,7 +140,7 @@
 					<p class="colorGray">Motherhood 母性</p>					<p class="colorBlue">Being a mother and having the responsibilities of caring for a child.</p>					<p class="colorGray">Superficial 表面的，肤浅的</p>					<p class="colorBlue">Not serious or deep, only about the surface or appearance.</p>					<p class="colorGray">Selfish 自私的</p>					<p class="colorBlue">Only thinking about oneself.</p>					<p class="colorGray">Circle of friends 朋友圈</p>					<p class="colorBlue">The group of friends a person has.</p>
 				</div>
 				<div class="exec clearfix txt-right">
-					<button class="btn btn-back">返回<i class="ico"></i></button>
+					<a href="index.html"><button class="btn btn-back">返回<i class="ico"></i></button></a>
 				</div>
 			</div>
 		</div>
