--- a/Wall_Street_English/html/teachvideo-detail-feed_dogs.html
+++ b/Wall_Street_English/html/teachvideo-detail-feed_dogs.html
@@ -109,8 +109,8 @@
 					<h3>Vocabulary:</h3>
 					<p class="colorGray">saggy</p>					<p class="colorBlue">bending or hanging down too much</p>					<p class="colorGray">nip and tuck</p>					<p class="colorBlue">a cosmetic surgical operation</p>					<p class="colorGray">Botox</p>					<p class="colorBlue">a drug used to treat and remove wrinkles</p>
 					<div class="video txt-center">
-						<!--video source from youku-->
-						<iframe height=420 width=580 src="http://player.youku.com/embed/XNzM2OTIyNzQ0" frameborder=0 allowfullscreen></iframe>
+						<!--video source-->
+						<video src="video/Rob’s debat_The Video Game.mp4" width="580" height="420" controls preload></video>
 					</div>
 				</div>
 				<div class="exec clearfix">
@@ -132,5 +132,6 @@
 
 	<script src="js/jquery-1.11.1.min.js"></script>
 	<script src="js/common.js"></script>
+	<script src="js/html5media/html5media.min.js"></script>
 </body>
 </html>
