--- a/Wall_Street_English/html/teachvideo-detail-looking_older.html
+++ b/Wall_Street_English/html/teachvideo-detail-looking_older.html
@@ -109,8 +109,8 @@
 					<h3>Vocabulary:</h3>
 					<p class="colorGray">Teddy dog</p>					<p class="colorBlue">Teddy dogs are "designer dogs," hybrids of two or more breeds.</p>					<p class="colorGray">pure breed dog</p>					<p class="colorBlue">pure bred dog typically refers to a dog of a modern dog breed with a documented pedigree.</p>					<p class="colorGray">a running machine</p>					<p class="colorBlue">treadmill, exercise machine.</p>					<p class="colorGray">jealous</p>					<p class="colorBlue">an envious resentment of someone.</p>					<p class="colorGray">cute</p>					<p class="colorBlue">attractive in a pretty or endearing way.</p>
 					<div class="video txt-center">
-						<!--video source from youku-->
-						<iframe height=420 width=580 src="http://player.youku.com/embed/XNzM2OTIyNzQ0" frameborder=0 allowfullscreen></iframe>
+						<!--video source-->
+						<video src="video/Rob’s debat_The Video Game.mp4" width="580" height="420" controls preload></video>
 					</div>
 				</div>
 				<div class="exec clearfix">
@@ -132,5 +132,6 @@
 
 	<script src="js/jquery-1.11.1.min.js"></script>
 	<script src="js/common.js"></script>
+	<script src="js/html5media/html5media.min.js"></script>
 </body>
 </html>
