--- a/Wall_Street_English/html/classroom-detail-dinning_out.html
+++ b/Wall_Street_English/html/classroom-detail-dinning_out.html
@@ -152,7 +152,7 @@
 					<p class="colorBlue">A thick, flat piece of meat or fish, especially meat from a cow.</p>
 				</div>
 				<div class="exec clearfix txt-right">
-					<button class="btn btn-back">返回<i class="ico"></i></button>
+					<a href="index.html"><button class="btn btn-back">返回<i class="ico"></i></button></a>
 				</div>
 			</div>
 		</div>
