--- a/Wall_Street_English/html/teachvideo-detail-the_video_game.html
+++ b/Wall_Street_English/html/teachvideo-detail-the_video_game.html
@@ -109,8 +109,8 @@
 					<h3>Vocabulary:</h3>
 					<p class="colorGray">stroke</p>					<p class="colorBlue">run your hands down an animal</p>					<p class="colorGray">sunset</p>					<p class="colorBlue">or sundown, is the daily disappearance of the Sun</p>					<p class="colorGray">scent</p>					<p class="colorBlue">sweet smell, especially from flowers</p>
 					<div class="video txt-center">
-						<!--video source from youku-->
-						<iframe height=420 width=580 src="http://player.youku.com/embed/XNzM2OTIyNzQ0" frameborder=0 allowfullscreen></iframe>
+						<!--video source-->
+						<video src="video/Rob’s debat_The Video Game.mp4" width="580" height="420" controls preload></video>
 					</div>
 				</div>
 				<div class="exec clearfix">
@@ -132,5 +132,6 @@
 
 	<script src="js/jquery-1.11.1.min.js"></script>
 	<script src="js/common.js"></script>
+	<script src="js/html5media/html5media.min.js"></script>
 </body>
 </html>
