--- a/Wall_Street_English/html/teachvideo-detail-looking_older.html
+++ b/Wall_Street_English/html/teachvideo-detail-looking_older.html
@@ -114,7 +114,7 @@
 					</div>
 				</div>
 				<div class="exec clearfix">
-					<button class="btn btn-download">下载<i class="ico"></i></button>
+					<a class="btn btn-download" href="video/Rob’s debat_The Video Game.mp4">下载<i class="ico"></i></a>
 					<button class="btn btn-back">返回<i class="ico"></i></button>
 				</div>
 			</div>
