--- a/Wall_Street_English/html/teachvideo-detail-feed_dogs.html
+++ b/Wall_Street_English/html/teachvideo-detail-feed_dogs.html
@@ -110,7 +110,7 @@
 					<p class="colorGray">saggy</p>					<p class="colorBlue">bending or hanging down too much</p>					<p class="colorGray">nip and tuck</p>					<p class="colorBlue">a cosmetic surgical operation</p>					<p class="colorGray">Botox</p>					<p class="colorBlue">a drug used to treat and remove wrinkles</p>
 					<div class="video txt-center">
 						<!--video source-->
-						<video src="video/Rob’s debat_The Video Game.mp4" width="580" height="420" controls preload></video>
+						<video src="video/Rob’s debat_The Video Game.mp4" width="580" height="420" controls></video>
 					</div>
 				</div>
 				<div class="exec clearfix">
