--- a/Wall_Street_English/html/teachvideo-detail-the_video_game.html
+++ b/Wall_Street_English/html/teachvideo-detail-the_video_game.html
@@ -110,7 +110,7 @@
 					<p class="colorGray">stroke</p>					<p class="colorBlue">run your hands down an animal</p>					<p class="colorGray">sunset</p>					<p class="colorBlue">or sundown, is the daily disappearance of the Sun</p>					<p class="colorGray">scent</p>					<p class="colorBlue">sweet smell, especially from flowers</p>
 					<div class="video txt-center">
 						<!--video source-->
-						<video src="video/Rob’s debat_The Video Game.mp4" width="580" height="420" controls preload></video>
+						<video src="video/Rob’s debat_The Video Game.mp4" width="580" height="420" controls></video>
 					</div>
 				</div>
 				<div class="exec clearfix">
