--- a/Wall_Street_English/html/classroom-detail-check-in.html
+++ b/Wall_Street_English/html/classroom-detail-check-in.html
@@ -137,7 +137,7 @@
 					<p class="colorGray">Check in 办理登机手续或旅馆入住手续</p>					<p class="colorBlue">To register at a hotel or before taking a plane</p>					<p class="colorGray">Passport 护照</p>					<p class="colorBlue">A document which demonstrates identity and nationality</p>					<p class="colorGray">Luggage 行李</p>					<p class="colorBlue">The cases, bags, boxes, etc., of a traveler.</p>					<p class="colorGray">Briefcase 公文包</p>					<p class="colorBlue">A small bag used by business people to carry documents and small items.</p>					<p class="colorGray">Aisle 通道</p>					<p class="colorBlue">A narrow passage between rows of seats on a plane.</p>					<p class="colorGray">Boarding card 登机牌</p>					<p class="colorBlue">An official card to be given when entering an aircraft.</p>
 				</div>
 				<div class="exec clearfix txt-right">
-					<a href="index.html"><button class="btn btn-back">返回<i class="ico"></i></button></a>
+					<a class="btn btn-back" href="classroom.html">返回<i class="ico"></i></a>
 				</div>
 			</div>
 		</div>
