--- a/Wall_Street_English/html/classroom-detail-dinning_out.html
+++ b/Wall_Street_English/html/classroom-detail-dinning_out.html
@@ -133,7 +133,7 @@
 					<hr>
 					<h3>Some people are dining in a restaurant...</h3>
 					<p class="colorBlue">Hugo: Excuse me Renzo, may we order, please?</p>
-					<p class="colorGray">Renzo: Yes, of course. What would you like, Miss Peters?</p>					<p class="colorRed">Annie: I'll start with onion soup please. And then I'll have roast chicken.</p>					<p class="colorGray">Renzo: Any vegetables?</p>					<p class="colorRed">Annie: Yes, I'll have peas and potatoes please: boiled potatoes.</p>					<p class="colorGray">Renzo: Thank you. And what about you, madam?</p>					<p class="colorGreen">Juanita: I'll have pâté to start with please, and then roast beef, with a green salad.</p>
+					<p class="colorGray">Renzo: Yes, of course. What would you like, Miss Peters?</p>					<p class="colorRed">Annie: I'll start with onion soup please. And then I'll have roast chicken.</p>					<p class="colorGray">Renzo: Any vegetables?</p>					<p class="colorRed">Annie: Yes, I'll have peas and potatoes please: boiled potatoes.</p>					<p class="colorGray">Renzo: Thank you. And what about you, madam?</p>					<p class="colorDeepBlue">Juanita: I'll have pâté to start with please, and then roast beef, with a green salad.</p>
 					<p class="colorGray">Renzo: And what about you. Mr. Peters?</p>					<p class="colorBlue">Hugo: I'll have pâté, please, and then a steak with a mixed salad.</p>
 					<p class="colorGray">Renzo: How would you like your steak cooked, Mr. Peters? Rare, medium or well done?</p>					<p class="colorBlue">Hugo: Rare, please.</p>
 					<p class="colorGray">Renzo: Rare.</p>					<hr>
@@ -152,7 +152,7 @@
 					<p class="colorBlue">A thick, flat piece of meat or fish, especially meat from a cow.</p>
 				</div>
 				<div class="exec clearfix txt-right">
-					<a href="index.html"><button class="btn btn-back">返回<i class="ico"></i></button></a>
+					<a class="btn btn-back" href="classroom.html">返回<i class="ico"></i></a>
 				</div>
 			</div>
 		</div>
