--- a/Wall_Street_English/html/classroom-detail-talking_about_your_job.html
+++ b/Wall_Street_English/html/classroom-detail-talking_about_your_job.html
@@ -143,7 +143,7 @@
 					<p class="colorGray">Buff 专家</p>					<p class="colorBlue">Expert or person who knows a lot about something.</p>
 				</div>
 				<div class="exec clearfix txt-right">
-					<a href="index.html"><button class="btn btn-back">返回<i class="ico"></i></button></a>
+					<a class="btn btn-back" href="classroom.html">返回<i class="ico"></i></a>
 				</div>
 			</div>
 		</div>
