--- a/Wall_Street_English/html/teachvideo-detail-looking_older.html
+++ b/Wall_Street_English/html/teachvideo-detail-looking_older.html
@@ -110,12 +110,12 @@
 					<p class="colorGray">Teddy dog</p>					<p class="colorBlue">Teddy dogs are "designer dogs," hybrids of two or more breeds.</p>					<p class="colorGray">pure breed dog</p>					<p class="colorBlue">pure bred dog typically refers to a dog of a modern dog breed with a documented pedigree.</p>					<p class="colorGray">a running machine</p>					<p class="colorBlue">treadmill, exercise machine.</p>					<p class="colorGray">jealous</p>					<p class="colorBlue">an envious resentment of someone.</p>					<p class="colorGray">cute</p>					<p class="colorBlue">attractive in a pretty or endearing way.</p>
 					<div class="video txt-center">
 						<!--video source-->
-						<video src="video/Rob’s debat_The Video Game.mp4" width="580" height="420" controls></video>
+						<video src="http://www.wselearning.com/video/Rob’s debat_The Video Game.mp4" width="580" height="420" controls></video>
 					</div>
 				</div>
 				<div class="exec clearfix">
-					<a class="btn btn-download" href="video/Rob’s debat_The Video Game.mp4">下载<i class="ico"></i></a>
-					<button class="btn btn-back">返回<i class="ico"></i></button>
+					<a class="btn btn-download" href="#">全文下载<i class="ico"></i></a>
+					<a class="btn btn-back" href="teachvideo.html">返回<i class="ico"></i></a>
 				</div>
 			</div>
 		</div>
