--- a/Wall_Street_English/html/teachvideo-detail-the_video_game.html
+++ b/Wall_Street_English/html/teachvideo-detail-the_video_game.html
@@ -110,12 +110,12 @@
 					<p class="colorGray">stroke</p>					<p class="colorBlue">run your hands down an animal</p>					<p class="colorGray">sunset</p>					<p class="colorBlue">or sundown, is the daily disappearance of the Sun</p>					<p class="colorGray">scent</p>					<p class="colorBlue">sweet smell, especially from flowers</p>
 					<div class="video txt-center">
 						<!--video source-->
-						<video src="video/Rob’s debat_The Video Game.mp4" width="580" height="420" controls></video>
+						<video src="http://www.wselearning.com/video/Rob’s debat_The Video Game.mp4" width="580" height="420" controls></video>
 					</div>
 				</div>
 				<div class="exec clearfix">
-					<a class="btn btn-download" href="video/Rob’s debat_The Video Game.mp4">下载<i class="ico"></i></a>
-					<button class="btn btn-back">返回<i class="ico"></i></button>
+					<a class="btn btn-download" href="#">全文下载<i class="ico"></i></a>
+					<a class="btn btn-back" href="teachvideo.html">返回<i class="ico"></i></a>
 				</div>
 			</div>
 		</div>
