--- a/Wall_Street_English/html/classroom-detail-buying_tickets_at_airport.html
+++ b/Wall_Street_English/html/classroom-detail-buying_tickets_at_airport.html
@@ -142,7 +142,7 @@
 					<p class="colorBlue">To know or become aware of something because you have been told it.</p>
 				</div>
 				<div class="exec clearfix txt-right">
-					<a href="index.html"><button class="btn btn-back">返回<i class="ico"></i></button></a>
+					<a class="btn btn-back" href="classroom.html">返回<i class="ico"></i></a>
 				</div>
 			</div>
 		</div>
