--- a/Wall_Street_English/html/classroom-detail-product_presentation.html
+++ b/Wall_Street_English/html/classroom-detail-product_presentation.html
@@ -153,7 +153,7 @@
 					<p class="colorBlue">A person with the job of preparing letters, arranging meetings, etc., for another</p>
 				</div>
 				<div class="exec clearfix txt-right">
-					<a href="index.html"><button class="btn btn-back">返回<i class="ico"></i></button></a>
+					<a class="btn btn-back" href="classroom.html">返回<i class="ico"></i></a>
 				</div>
 			</div>
 		</div>
