--- a/Wall_Street_English/html/classroom-detail-buying_tickets_at_airport.html
+++ b/Wall_Street_English/html/classroom-detail-buying_tickets_at_airport.html
@@ -81,7 +81,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#" class="clearfix">
+				<a href="index.html" class="clearfix">
 					<div class="tit">
 						<i class="ico ico-activity"></i>
 						<span class="txt">特别活动</span>
@@ -150,7 +150,7 @@
 
 	<footer class="layout-footer">
 		<div class="container clearfix">
-			<p class="logo">PEARSON</p>
+			<p class="logo"><i class="ico"></i></p>
 			<p class="copyright">Copyright &copy; 2011 Gamma Master China Limited.</p>
 			<p class="license"><a href="#">沪ICP备09041169号-3</a></p>
 		</div>
