--- a/Wall_Street_English/html/teachvideo-detail-feed_dogs.html
+++ b/Wall_Street_English/html/teachvideo-detail-feed_dogs.html
@@ -81,7 +81,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#" class="clearfix">
+				<a href="index.html" class="clearfix">
 					<div class="tit">
 						<i class="ico ico-activity"></i>
 						<span class="txt">特别活动</span>
@@ -107,7 +107,7 @@
 				</h2>
 				<div class="detail">
 					<h3>Vocabulary:</h3>
-					<p class="colorGray">saggy</p>					<p class="colorBlue">bending or hanging down too much</p>					<p class="colorGray">nip and tuck</p>					<p class="colorBlue">a cosmetic surgical operation</p>					<p class="colorGray">Botox</p>					<p class="colorBlue">a drug used to treat and remove wrinkles</p>
+					<p class="colorGray">Teddy dog</p>					<p class="colorBlue">Teddy dogs are "designer dogs," hybrids of two or more breeds.</p>					<p class="colorGray">pure breed dog</p>					<p class="colorBlue">pure bred dog typically refers to a dog of a modern dog breed with a documented pedigree.</p>					<p class="colorGray">a running machine</p>					<p class="colorBlue">treadmill, exercise machine.</p>					<p class="colorGray">jealous</p>					<p class="colorBlue">an envious resentment of someone.</p>					<p class="colorGray">cute</p>					<p class="colorBlue">attractive in a pretty or endearing way.</p>
 					<div class="video txt-center">
 						<!--video source-->
 						<video src="http://www.wselearning.com/video/Rob’s debat_The Video Game.mp4" width="580" height="420" controls></video>
@@ -123,7 +123,7 @@
 
 	<footer class="layout-footer">
 		<div class="container clearfix">
-			<p class="logo">PEARSON</p>
+			<p class="logo"><i class="ico"></i></p>
 			<p class="copyright">Copyright &copy; 2011 Gamma Master China Limited.</p>
 			<p class="license"><a href="#">沪ICP备09041169号-3</a></p>
 		</div>
