--- a/Wall_Street_English/html/leveltest-result.html
+++ b/Wall_Street_English/html/leveltest-result.html
@@ -81,7 +81,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#" class="clearfix">
+				<a href="index.html" class="clearfix">
 					<div class="tit">
 						<i class="ico ico-activity"></i>
 						<span class="txt">特别活动</span>
@@ -101,71 +101,11 @@
 	<section class="layout-main">
 		<div class="container clearfix">
 			<div class="maindetail maindetail-leveltest">
-				<h2 class="title title-score">您的得分：<span>90</span></h2>
-				<div class="detail"><h3 class="comment">你的英语这么好，又有什么工作拿不下呢？Hold住全场的商务英语达人就是你！</h3></div>
+				<h2 class="title title-score">您的得分：<span></span></h2>
+				<div class="detail"><h3 class="comment"></h3></div>
 				<div class="list-results">
 					<hr>
 					<ul>
-						<li class="pass">
-							<div class="question">You are at an important dinner party and you are introduced to the CEO of WSI. What would you say？</div>
-							<div class="answer">
-								<h4>你的答案：</h4>
-								Hi!
-							</div>
-							<div class="correct">
-								<h4>正确答案：</h4>
-								How do you do?
-							</div>
-							<hr>
-						</li>
-						<li class="pass">
-							<div class="question">You are at an important dinner party and you are introduced to the CEO of WSI. What would you say？</div>
-							<div class="answer">
-								<h4>你的答案：</h4>
-								Hi!
-							</div>
-							<div class="correct">
-								<h4>正确答案：</h4>
-								How do you do?
-							</div>
-							<hr>
-						</li>
-						<li>
-							<div class="question">You are at an important dinner party and you are introduced to the CEO of WSI. What would you say？</div>
-							<div class="answer">
-								<h4>你的答案：</h4>
-								Hi!
-							</div>
-							<div class="correct">
-								<h4>正确答案：</h4>
-								How do you do?
-							</div>
-							<hr>
-						</li>
-						<li>
-							<div class="question">You are at an important dinner party and you are introduced to the CEO of WSI. What would you say？</div>
-							<div class="answer">
-								<h4>你的答案：</h4>
-								Hi!
-							</div>
-							<div class="correct">
-								<h4>正确答案：</h4>
-								How do you do?
-							</div>
-							<hr>
-						</li>
-						<li>
-							<div class="question">You are at an important dinner party and you are introduced to the CEO of WSI. What would you say？</div>
-							<div class="answer">
-								<h4>你的答案：</h4>
-								Hi!
-							</div>
-							<div class="correct">
-								<h4>正确答案：</h4>
-								How do you do?
-							</div>
-							<hr>
-						</li>
 					</ul>
 				</div>
 				<div class="exec clearfix txt-right">
@@ -177,7 +117,7 @@
 
 	<footer class="layout-footer">
 		<div class="container clearfix">
-			<p class="logo">PEARSON</p>
+			<p class="logo"><i class="ico"></i></p>
 			<p class="copyright">Copyright &copy; 2011 Gamma Master China Limited.</p>
 			<p class="license"><a href="#">沪ICP备09041169号-3</a></p>
 		</div>
