amend wrong word

--- a/Wall_Street_English/html/teachvideo.html
+++ b/Wall_Street_English/html/teachvideo.html
@@ -105,7 +105,7 @@
 					<i class="ico ico-main"></i>
 					<div class="tit">
 						<span class="cn">英语聊游戏</span>
-						<span class="en">The Veido Game</span>
+						<span class="en">The Video Game</span>
 					</div>
 					<div class="summary">
 						<a href="#" class="trigger">查看简述 &gt;</a>
