--- a/mioxu_site/html/portfolio.html
+++ b/mioxu_site/html/portfolio.html
@@ -19,9 +19,9 @@
 		<div class="logo"><a href="#"><img src="images/logo.png" alt="mio xu"></a></div>
 		<nav class="navig">
 			<ul>
-				<li class="current"><a href="#">PORTFOLIO</a></li>
-				<li><a href="#">ILLUSTRATION</a></li>
-				<li><a href="#">ABOUT</a></li>
+				<li class="current"><a href="portfolio.html">PORTFOLIO</a></li>
+				<li><a href="illustration.html">ILLUSTRATION</a></li>
+				<li><a href="about.html">ABOUT</a></li>
 			</ul>
 		</nav>
 	</div>
@@ -30,19 +30,20 @@
 
 <section class="layout-main ">
 	<div class="container clearfix">
-		<div class="contents-about">
+		<div class="contents contents-portfolio">
+			<div class="nav">
+				<a class="btn btn-prev" href="#" title="上一页"><i class="ico"></i></a>
+				<a class="btn btn-next" href="#" title="下一页"><i class="ico"></i></a>
+			</div>
+			<h2 class="title">Uniliver Foods Solution [大众点评榜]</h2>
 			<div class="content">
-				<p class="face"><img src="images/face-mioxu.jpg"></p>
-				<p>I’M Mio Xu,  Art Director Who Creates Visual Experiences.<br>Mio Xu，美术指导</p>
-				<hr>
-				<p>During the past years I’ve worked with some of the most awesome brands in the world...<br>
-				... such as Uniever-Zhonghua, Lux, OMO, Lipton, LYNX, Knorr, CLEAR, Hazeline, Kotex, PHILIPS, 3M,<br>
-				Johnson’s baby, Roche, NBC China and many more.</p>
-				<p>在过去的几年中，我有幸为这些知名品牌进行设计工作...<br>
-				...它们是联合利华旗下的中华牙膏、力士、奥妙、立顿、凌仕、家乐、清扬、夏士莲，高洁丝，飞利浦，3M，<br>
-				强生婴儿，罗氏，南洋商业银行等。</p>
+				<p><img src="images/temp/4.jpg" alt=""></p>
+				<p><img src="images/temp/1.jpg" alt=""></p>
+				<p><img src="images/temp/2.jpg" alt=""></p>
+				<p><img src="images/temp/3.jpg" alt=""></p>
 			</div>
 		</div>
+		<a class="btn btn-gototop" href="#"><i class="ico"></i></a>
 	</div>
 </section>
 
@@ -57,6 +58,7 @@
 		<p class="license"><a href="#">沪ICP备09041169号-3</a></p>
 	</div>
 </footer>
+
 
 
 <script src="js/jquery-1.11.1.min.js"></script>
