--- a/mioxu_site/html/about.html
+++ b/mioxu_site/html/about.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, target-densityDpi=200">
+	<meta name="viewport" content="width=device-width, target-densitydpi=device-dpi">
 	<title>Mio Xu</title>
 	<link rel="shortcut icon" href="#?20140403">
 	<link rel="stylesheet" href="styles/common.css" />
